--- a/products.html
+++ b/products.html
@@ -18,14 +18,14 @@
         <main>
             <div class="content-box products-content">
                 <h1>Our Products</h1>
-                <img src="https://picsum.photos/300/200?random=1" alt="Product 1">
-                <img src="https://picsum.photos/300/200?random=2" alt="Product 2">
-                <img src="https://picsum.photos/300/200?random=3" alt="Product 3">
-                <img src="https://picsum.photos/300/200?random=4" alt="Product 4">
+                <img src="https://www.google.com/imgres?q=photos%20of%20wisteria%20trees&imgurl=https%3A%2F%2Foffloadmedia.feverup.com%2Fsecretlosangeles.com%2Fwp-content%2Fuploads%2F2020%2F06%2F19131951%2Fwisteria.jpg&imgrefurl=https%3A%2F%2Fsecretlosangeles.com%2Fmost-beautiful-wisteria-tree-world%2F&docid=MlO4eu8MeS8dCM&tbnid=8WIBdYLJ802AkM&vet=12ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIHxAB..i&w=1300&h=867&hcb=2&ved=2ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIHxAB" alt="Product 1">
+                <img src="https://www.google.com/imgres?q=photos%20of%20wisteria%20trees&imgurl=https%3A%2F%2Fwww.tytyga.com%2Fv%2Fvspfiles%2Fphotos%2FFLWTRE-WISTERIA-2T.jpg&imgrefurl=https%3A%2F%2Fwww.tytyga.com%2FWisteria-Tree-p%2Fflwtre-wisteria.htm&docid=g-4CVx4HDPuSRM&tbnid=qVhQJpY2zR6jVM&vet=12ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIKhAB..i&w=800&h=800&hcb=2&ved=2ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIKhAB" alt="Product 2">
+                <img src="https://www.google.com/imgres?q=photos%20of%20wisteria%20trees&imgurl=https%3A%2F%2Fmymodernmet.com%2Fwp%2Fwp-content%2Fuploads%2F2022%2F04%2Fwisteria-tree-japan-2022-thumbnail.jpg&imgrefurl=https%3A%2F%2Fmymodernmet.com%2Fwisteria-trees-japan%2F&docid=4bU0Q1rKAZ6PoM&tbnid=6WuIHzzlDBNQgM&vet=12ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIIRAB..i&w=1200&h=630&hcb=2&ved=2ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIIRAB" alt="Product 3">
+                <img src="https://www.google.com/imgres?q=photos%20of%20wisteria%20trees&imgurl=https%3A%2F%2Fwww.gardenandhome.co.za%2Fwp-content%2Fuploads%2F2024%2F05%2Fistockphoto-1009816632-612x612Image.jpeg&imgrefurl=https%3A%2F%2Fwww.gardenandhome.co.za%2Fgardening%2Ftransform-your-garden-with-beautiful-wisteria-trees%2F&docid=0ZCLdiNQYHwYyM&tbnid=Ut4DNyEmOr9LcM&vet=12ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIYBAB..i&w=612&h=408&hcb=2&ved=2ahUKEwiEi-Hd4-6SAxW7l2oFHZOBNbUQnPAOegQIYBAB" alt="Product 4">
             </div>
         </main>
         <footer>
-            <p>&copy; 2023 My Webpage. All rights reserved.</p>
+            <p>&copy; 2026 My Webpage. All rights reserved.</p>
         </footer>
     </div>
 </body>
