--- a/about.html
+++ b/about.html
@@ -18,13 +18,13 @@
         <main>
             <div class="content-box about-content">
                 <h1>About Us</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                <p>You cannot change what you refuse to confront.</p>
+                <p>EGiving up doesn’t always mean you’re weak, sometimes it means you are strong enough and smart enough to let go and move on.</p>
+                <p>Don’t choose the one who is beautiful to the world; choose the one who makes your world beautiful.</p>
             </div>
         </main>
         <footer>
-            <p>&copy; 2023 My Webpage. All rights reserved.</p>
+            <p>&copy; 2026 My Webpage. All rights reserved.</p>
         </footer>
     </div>
 </body>
